Implemented additional checks

--- a/jeaf-generator-test-spring-boot3/src-gen/main/resources/base/product-base.yml
+++ b/jeaf-generator-test-spring-boot3/src-gen/main/resources/base/product-base.yml
@@ -1504,6 +1504,8 @@ components:
         - successorProperty
       properties:
         deprecatedProperty:
+          description: |
+            a comment
           type: string
           deprecated: true
           nullable: false
