Updated generated code

--- a/jeaf-generator-test-spring-boot3/src-gen/main/resources/base/product-base.yml
+++ b/jeaf-generator-test-spring-boot3/src-gen/main/resources/base/product-base.yml
@@ -1495,7 +1495,7 @@ components:
           type: string
           nullable: false
 
-    # com.anaptecs.spring.base.SimpleAssociationBackwardCompatibility
+    # com.anaptecs.spring.base.backward.SimpleAssociationBackwardCompatibility
     SimpleAssociationBackwardCompatibility:
       type: object
       additionalProperties: false
