--- a/jeaf-generator-test-deprecation-report/pom.xml
+++ b/jeaf-generator-test-deprecation-report/pom.xml
@@ -73,7 +73,7 @@
 					
 					<generateSecurityRolesReport>true</generateSecurityRolesReport>
 					<securityRolesReportName>My Roles Report</securityRolesReportName>
-					
+					<listUnsecuredRESTEndpoints>true</listUnsecuredRESTEndpoints>
 
 					<!-- Define information that are written to file headers -->
 					<fileHeaderCompany>anaptecs GmbH, Ricarda-Huch-Str. 71, 72760 Reutlingen, Germany</fileHeaderCompany>
