--- a/jeaf-generator-test-spring-boot3/src-gen/main/resources/base/product-base.yml
+++ b/jeaf-generator-test-spring-boot3/src-gen/main/resources/base/product-base.yml
@@ -144,6 +144,18 @@ components:
       format: double
       nullable: false
 
+    # com.anaptecs.spring.base.AbstractWithCustomImpl
+    AbstractWithCustomImpl:
+      type: object
+      additionalProperties: false
+      required:
+        - justAProperty
+      properties:
+        justAProperty:
+          type: integer
+          format: int32
+          nullable: false
+
     # com.anaptecs.spring.base.BidirectA
     BidirectA:
       type: object
