[maven-release-plugin] prepare for next development iteration

--- a/jeaf-generator-test-spring-rest-proxy/pom.xml
+++ b/jeaf-generator-test-spring-rest-proxy/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.anaptecs.jeaf.generator</groupId>
 		<artifactId>jeaf-generator-project</artifactId>
-		<version>1.22.0</version>
+		<version>1.22.1-SNAPSHOT</version>
 	</parent>
 
 	<name>JEAF Generator Test Spring REST Proxy</name>
