--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,7 @@
 		<spring.core.version>5.3.29</spring.core.version>
 		<spring.security.version>5.7.10</spring.security.version>
 		<jakartaee-api.version>10.0.0</jakartaee-api.version>
+		<reactor-core.version>3.6.8</reactor-core.version>
 		
 		<swagger-parser.version>2.1.22</swagger-parser.version>
 		<log4j-to-slf4j.version>2.23.1</log4j-to-slf4j.version>
