--- a/jeaf-generator-beautifier/pom.xml
+++ b/jeaf-generator-beautifier/pom.xml
@@ -11,6 +11,11 @@
     <packaging>jar</packaging>
 
     <dependencies>
+		<dependency>
+		    <groupId>com.github.javaparser</groupId>
+		    <artifactId>javaparser-core</artifactId>
+		    <version>3.26.1</version>
+		</dependency>
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
