--- a/jeaf-generator-beautifier/pom.xml
+++ b/jeaf-generator-beautifier/pom.xml
@@ -14,7 +14,7 @@
 		<dependency>
 		    <groupId>com.github.javaparser</groupId>
 		    <artifactId>javaparser-core</artifactId>
-		    <version>3.26.1</version>
+		    <version>${javaparser-core.version}</version>
 		</dependency>
         <dependency>
             <groupId>commons-io</groupId>
