--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,7 @@
 		<spring.security.version>5.7.10</spring.security.version>
 		<jakartaee-api.version>10.0.0</jakartaee-api.version>
 		
+		<javaparser-core.version>3.26.1</javaparser-core.version>
 		<swagger-parser.version>2.1.22</swagger-parser.version>
 		<log4j-to-slf4j.version>2.23.1</log4j-to-slf4j.version>
 		<equalsverifier.version>3.16.1</equalsverifier.version>
