Initial draft of reactive services and controller

--- a/jeaf-generator-test-spring/pom.xml
+++ b/jeaf-generator-test-spring/pom.xml
@@ -172,6 +172,7 @@
 					<targetRuntime>SPRING</targetRuntime>
 					<restLibrary>SPRING_WEB_MVC</restLibrary>
 					<generateRESTResources>true</generateRESTResources>
+					<generateReactiveRESTResources>true</generateReactiveRESTResources>
 					<generateSecurityAnnotation>true</generateSecurityAnnotation>
 					<defaultSecurityRoleName>NO_ACCESS</defaultSecurityRoleName>
 					<generateRESTRequestValidation>true</generateRESTRequestValidation>
