--- a/pom.xml
+++ b/pom.xml
@@ -43,8 +43,8 @@
 		<jeaf.jersey.extensions.version>1.8.0</jeaf.jersey.extensions.version>
 		<jeaf.validation.api.version>1.8.0</jeaf.validation.api.version>
 		<jeaf.validation.impl.version>1.8.0</jeaf.validation.impl.version>
-		<jeaf.rest.api.version>2.0.0-RC1-SNAPSHOT</jeaf.rest.api.version>
-		<jeaf.rest.impl.version>2.0.0-RC1-SNAPSHOT</jeaf.rest.impl.version>
+		<jeaf.rest.api.version>2.0.0-RC1</jeaf.rest.api.version>
+		<jeaf.rest.impl.version>2.0.0-RC1</jeaf.rest.impl.version>
 		<jeaf.test.model.version>2.3.1</jeaf.test.model.version>
 		<jeaf.generator.messages.version>1.16.5</jeaf.generator.messages.version>
 		
