--- a/jeaf-generator-test-error-handling/pom.xml
+++ b/jeaf-generator-test-error-handling/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.anaptecs.jeaf.generator</groupId>
 		<artifactId>jeaf-generator-project</artifactId>
-		<version>1.22.6-SNAPSHOT</version>
+		<version>1.22.6</version>
 	</parent>
 
 	<name>JEAF Generator Test Error Handling</name>
