Made model report configurable

--- a/jeaf-generator-test-deprecation-report/pom.xml
+++ b/jeaf-generator-test-deprecation-report/pom.xml
@@ -65,6 +65,7 @@
 					<typesReportGroupByPackage>true</typesReportGroupByPackage>
 					<typesReportStereotypes>POJO; ServiceObject; JEAFEnumeration</typesReportStereotypes>
 					
+					<generateModelReport>true</generateModelReport>
 					<generateBreakingChangesReport>true</generateBreakingChangesReport>
 					<generateRESTDeprecationReport>true</generateRESTDeprecationReport>
 					<generateJavaDeprecationReport>true</generateJavaDeprecationReport>
