Implemented and tested #277

--- a/jeaf-generator-test-service-objects/pom.xml
+++ b/jeaf-generator-test-service-objects/pom.xml
@@ -87,6 +87,7 @@
 					<generateCustomConstraints>true</generateCustomConstraints>
 					<generateHeavyExtensibleEnums>true</generateHeavyExtensibleEnums>
 					<generateObjectValidationInBuilder>true</generateObjectValidationInBuilder>
+					<disableSaveCopyOfCollectionsInBuilders>true</disableSaveCopyOfCollectionsInBuilders>
 					
 					<generateOfOperation>true</generateOfOperation>
 					<generateValueOfForOpenAPIDataTypes>false</generateValueOfForOpenAPIDataTypes>
