--- a/jeaf-generator-test-spring-boot3/pom.xml
+++ b/jeaf-generator-test-spring-boot3/pom.xml
@@ -103,6 +103,7 @@
 					
 					<generateOfOperation>true</generateOfOperation>
 					<generateValueOfForOpenAPIDataTypes>false</generateValueOfForOpenAPIDataTypes>
+					<disableSaveCopyOfCollectionsInBuilders>true</disableSaveCopyOfCollectionsInBuilders>
 
 					<!--
 					<generateObjectValidationInBuilder>true</generateObjectValidationInBuilder>
