Implemented and tested #289 now also for OpenAPI.

--- a/jeaf-generator-test-spring-boot3/src-gen/main/resources/base/product-base.yml
+++ b/jeaf-generator-test-spring-boot3/src-gen/main/resources/base/product-base.yml
@@ -622,7 +622,7 @@ components:
       enum:
         - FOO
         - BAR
-        - FOO_BAR
+        - FOO-BAR
         - UIC_STOP_PLACE
         - GEO_POSITION
         - SWIIS_GEO_POSITION
