Implemented and tested #307

--- a/jeaf-generator-test-spring-boot3/pom.xml
+++ b/jeaf-generator-test-spring-boot3/pom.xml
@@ -117,6 +117,7 @@
 					<generateOpenAPISpec>true</generateOpenAPISpec>
 					<validateOpenAPISpec>true</validateOpenAPISpec>
 					<openAPISpecReferenceDefaultLocation>../</openAPISpecReferenceDefaultLocation>
+					<suppressNotRequiredNullableInOpenAPISpec>true</suppressNotRequiredNullableInOpenAPISpec>
 
 					<!-- Define information that are written to file headers -->
 					<fileHeaderCompany>anaptecs GmbH, Ricarda-Huch-Str. 71, 72760 Reutlingen, Germany</fileHeaderCompany>
