Implemented and tested #306

--- a/jeaf-generator-test-spring-boot3/pom.xml
+++ b/jeaf-generator-test-spring-boot3/pom.xml
@@ -99,6 +99,7 @@
 					-->
 					<generatePOJOs>true</generatePOJOs>
 					<generateEqualsAndHashCode>true</generateEqualsAndHashCode>
+					<implementCompareableForOpenAPIDataTypes>true</implementCompareableForOpenAPIDataTypes>
 					<enableDetailedToStringMethod>true</enableDetailedToStringMethod>
 					
 					<generateOfOperation>true</generateOfOperation>
