First tested draft

--- a/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/products/product-services.yml
+++ b/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/products/product-services.yml
@@ -148,6 +148,7 @@ paths:
           required: true
           schema:
             type: string
+            nullable: false
             minLength: 1
             default: 4711
             examples:
@@ -184,12 +185,14 @@ paths:
           required: true
           schema:
             type: string
+            nullable: false
             minLength: 1
         - name: lang
           in: header
           required: true
           schema:
             type: string
+            nullable: false
             examples:
              - en
         - name: reseller
@@ -198,17 +201,20 @@ paths:
           schema:
             type: integer
             format: int64
+            nullable: false
         - name: id
           in: path
           required: true
           schema:
             type: integer
             format: int64
+            nullable: false
         - name: q1
           in: query
           required: true
           schema:
             type: string
+            nullable: false
         - name: intCode
           in: header
           schema:
@@ -326,12 +332,14 @@ paths:
           required: true
           schema:
             type: string
+            nullable: false
             minLength: 1
         - name: lang
           in: header
           required: true
           schema:
             type: string
+            nullable: false
             examples:
              - en
         - name: reseller
@@ -340,11 +348,13 @@ paths:
           schema:
             type: integer
             format: int64
+            nullable: false
         - name: q1
           in: query
           required: true
           schema:
             type: string
+            nullable: false
       responses:
         '201':
           description: >-
@@ -375,17 +385,20 @@ paths:
           required: true
           schema:
             type: string
+            nullable: false
         - name: lang
           in: header
           required: true
           schema:
             type: string
+            nullable: false
         - name: q2
           in: query
           required: true
           deprecated: true
           schema:
             type: string
+            nullable: false
       responses:
         '202':
           description: >-
@@ -409,6 +422,7 @@ paths:
           schema:
             type: integer
             format: int32
+            nullable: false
       responses:
         '201':
           description: >-
@@ -522,12 +536,14 @@ paths:
           required: true
           schema:
             type: string
+            nullable: false
             minLength: 1
         - name: lang
           in: header
           required: true
           schema:
             type: string
+            nullable: false
             examples:
              - en
         - name: reseller
@@ -536,17 +552,20 @@ paths:
           schema:
             type: integer
             format: int64
+            nullable: false
         - name: id
           in: path
           required: true
           schema:
             type: integer
             format: int64
+            nullable: false
         - name: q1
           in: query
           required: true
           schema:
             type: string
+            nullable: false
         - name: intCode
           in: header
           schema:
@@ -556,6 +575,7 @@ paths:
           required: true
           schema:
             type: string
+            nullable: false
         - name: deprecatedHeader
           in: header
           required: true
@@ -1039,66 +1059,77 @@ paths:
           required: true
           schema:
             type: string
+            nullable: false
         - name: startTimestamp
           in: query
           required: true
           schema:
             type: string
             format: date-time
+            nullable: false
         - name: startTime
           in: query
           required: true
           schema:
             type: string
             format: time
+            nullable: false
         - name: localStartTimestamp
           in: query
           required: true
           schema:
             type: string
             format: date-time
+            nullable: false
         - name: localStartTime
           in: query
           required: true
           schema:
             type: string
             format: time
+            nullable: false
         - name: localStartDate
           in: query
           required: true
           schema:
             type: string
             format: date
+            nullable: false
         - name: calendar
           in: query
           required: true
           schema:
             type: string
             format: date-time
+            nullable: false
         - name: utilDate
           in: query
           required: true
           schema:
             type: string
             format: date-time
+            nullable: false
         - name: sqlTimestamp
           in: query
           required: true
           schema:
             type: string
             format: date-time
+            nullable: false
         - name: sqlTime
           in: query
           required: true
           schema:
             type: string
             format: time
+            nullable: false
         - name: sqlDate
           in: query
           required: true
           schema:
             type: string
             format: date
+            nullable: false
       responses:
         '202':
           description: >-
@@ -1121,12 +1152,14 @@ paths:
           schema:
             type: string
             format: date-time
+            nullable: false
         - name: offsetTime
           in: query
           required: true
           schema:
             type: string
             format: time
+            nullable: false
         - name: localDateTime
           in: query
           description: >-
@@ -1137,53 +1170,62 @@ paths:
           schema:
             type: string
             format: date-time
+            nullable: false
         - name: localTime
           in: query
           required: true
           schema:
             type: string
             format: time
+            nullable: false
         - name: localDate
           in: query
           required: true
           schema:
             type: string
             format: date
+            nullable: false
         - name: utilDate
           in: query
           required: true
           schema:
             type: string
             format: date-time
+            nullable: false
         - name: calendar
           in: query
           required: true
           schema:
             type: string
             format: date-time
+            nullable: false
         - name: sqlTimestamp
           in: query
           required: true
           schema:
             type: string
             format: date-time
+            nullable: false
         - name: sqlTime
           in: query
           required: true
           schema:
             type: string
             format: time
+            nullable: false
         - name: sqlDate
           in: query
           required: true
           schema:
             type: string
             format: date
+            nullable: false
         - name: path
           in: path
           required: true
           schema:
             type: string
+            nullable: false
       responses:
         '202':
           description: >-
@@ -1240,16 +1282,19 @@ paths:
           required: true
           schema:
             type: string
+            nullable: false
         - name: content-type
           in: header
           required: true
           schema:
             type: string
+            nullable: false
         - name: ACCEPT
           in: header
           required: true
           schema:
             type: string
+            nullable: false
       responses:
         '202':
           description: >-
@@ -1271,11 +1316,13 @@ paths:
           required: true
           schema:
             type: string
+            nullable: false
         - name: Authentication
           in: header
           required: true
           schema:
             type: string
+            nullable: false
       responses:
         '201':
           description: >-
@@ -1306,11 +1353,13 @@ paths:
           required: true
           schema:
             type: string
+            nullable: false
         - name: Authentication
           in: header
           required: true
           schema:
             type: string
+            nullable: false
       responses:
         '201':
           description: >-
@@ -1520,6 +1569,7 @@ paths:
           required: true
           schema:
             type: string
+            nullable: false
             minLength: 32
             maxLength: 64
         - name: longValues
@@ -1599,6 +1649,7 @@ paths:
           required: true
           schema:
             type: string
+            nullable: false
             minLength: 32
             maxLength: 64
         - name: longValues
@@ -1617,6 +1668,7 @@ paths:
           required: true
           schema:
             type: string
+            nullable: false
       responses:
         '202':
           description: >-
@@ -1638,6 +1690,7 @@ paths:
           required: true
           schema:
             type: string
+            nullable: false
       responses:
         '202':
           description: >-
@@ -1727,6 +1780,7 @@ paths:
           schema:
             type: integer
             format: int32
+            nullable: false
             minimum: 32
       responses:
         '202':
@@ -1749,12 +1803,14 @@ paths:
           required: true
           schema:
             type: string
+            nullable: false
             minLength: 1
         - name: lang
           in: header
           required: true
           schema:
             type: string
+            nullable: false
             examples:
              - en
         - name: reseller
@@ -1763,17 +1819,20 @@ paths:
           schema:
             type: integer
             format: int64
+            nullable: false
         - name: id
           in: path
           required: true
           schema:
             type: integer
             format: int64
+            nullable: false
         - name: q1
           in: query
           required: true
           schema:
             type: string
+            nullable: false
         - name: intCode
           in: header
           schema:
@@ -1917,6 +1976,7 @@ components:
       in: header
       schema:
         type: string
+        nullable: false
       required: true
 
     # com.anaptecs.jeaf.junit.openapi.service1.ChildBeanParameterType.childProperty
@@ -1925,6 +1985,7 @@ components:
       in: header
       schema:
         type: string
+        nullable: false
       required: true
 
     # com.anaptecs.jeaf.junit.openapi.service1.LocalBeanParamType.localID
@@ -1933,6 +1994,7 @@ components:
       in: header
       schema:
         type: string
+        nullable: false
       required: true
 
     # com.anaptecs.jeaf.junit.openapi.service1.LocalBeanParamType.localKey
@@ -1941,6 +2003,7 @@ components:
       in: header
       schema:
         type: string
+        nullable: false
       required: true
 
   responses:
