--- a/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/base/product-base.yml
+++ b/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/base/product-base.yml
@@ -56,6 +56,7 @@ components:
       in: header
       schema:
         type: string
+        nullable: false
       required: true
 
     # com.anaptecs.jeaf.junit.openapi.base.NotInlinedBeanParam.doubleCode
@@ -65,6 +66,7 @@ components:
       schema:
         type: number
         format: double
+        nullable: false
       required: true
 
     # com.anaptecs.jeaf.junit.openapi.base.NotInlinedBeanParam.extensibleEnum
@@ -73,6 +75,7 @@ components:
       in: header
       schema:
         type: string
+        nullable: false
         x-extensible-enum:
           - RED
           - GREEN
@@ -85,6 +88,7 @@ components:
       in: header
       schema:
         type: string
+        nullable: false
       required: true
 
     # com.anaptecs.jeaf.junit.openapi.base.ParentBeanParamType.novaKey
@@ -93,6 +97,7 @@ components:
       in: header
       schema:
         type: string
+        nullable: false
       required: true
 
     # com.anaptecs.jeaf.junit.openapi.base.ParentBeanParamType.tkID
@@ -101,6 +106,7 @@ components:
       in: header
       schema:
         type: string
+        nullable: false
       required: true
 
   responses:
