--- a/jeaf-generator-test-spring-boot3/src-gen/main/resources/base/product-base.yml
+++ b/jeaf-generator-test-spring-boot3/src-gen/main/resources/base/product-base.yml
@@ -55,6 +55,7 @@ components:
       in: header
       schema:
         type: string
+        nullable: false
       required: true
 
     # com.anaptecs.spring.base.ParentBeanParamType.tkID
@@ -63,6 +64,7 @@ components:
       in: header
       schema:
         type: string
+        nullable: false
       required: true
 
   responses:
