--- a/jeaf-generator-test-spring-boot3/src-gen/main/resources/products/product-services.yml
+++ b/jeaf-generator-test-spring-boot3/src-gen/main/resources/products/product-services.yml
@@ -1,4 +1,4 @@
-openapi: 3.1.0
+openapi: 3.0.0
 
 info:
   title: Product Services
@@ -60,7 +60,8 @@ paths:
                 type: array
                 items:
                   $ref: '../base/product-base.yml#/components/schemas/Product'
-                minItems: 0
+                minItems: 1
+                maxItems: 4711
           headers:
             Cache-Control:
               schema:
@@ -628,6 +629,7 @@ paths:
                   examples:
                    - CHF
                 minItems: 1
+                maxItems: 20
                 nullable: false
           headers:
             X-Global-Response-Header:
@@ -728,6 +730,8 @@ paths:
             application/json:
               schema:
                 type: string
+                minLength: 111
+                maxLength: 666
           headers:
             X-Global-Response-Header:
               schema:
@@ -1250,6 +1254,32 @@ paths:
         'default':
           $ref: '#/components/responses/CustomErrorResponse'
     
+  /products/get-binary-content:
+    get:
+      operationId: getBinaryContext
+      responses:
+        '200':
+          description: |
+            TODO: Please add comment for response
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: integer
+                  format: int32
+                maxItems: 2048
+          headers:
+            X-Global-Response-Header:
+              schema:
+                type: string
+                default: 'Hello World'
+    
+        '400':
+          $ref: '#/components/responses/CustomErrorResponse'
+        'default':
+          $ref: '#/components/responses/CustomErrorResponse'
+    
   # RESTProductService
   /rest-products:
     get:
@@ -1276,7 +1306,6 @@ paths:
                 type: array
                 items:
                   $ref: '../base/product-base.yml#/components/schemas/Product'
-                minItems: 0
     
         '400':
           $ref: '#/components/responses/CustomErrorResponse'
