--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
 		<jeaf.rest.api.version>2.0.0-RC1</jeaf.rest.api.version>
 		<jeaf.rest.impl.version>2.0.0-RC1</jeaf.rest.impl.version>
 		<jeaf.test.model.version>2.4.1-SNAPSHOT</jeaf.test.model.version>
-		<jeaf.generator.messages.version>1.16.5</jeaf.generator.messages.version>
+		<jeaf.generator.messages.version>1.16.6-SNAPSHOT</jeaf.generator.messages.version>
 		
 		<!-- Please be aware that Spring Boot and Spring core versions must match together -->
 		<spring.boot.version>2.7.17</spring.boot.version>
